--- a/dailybowlnpo/pom.xml
+++ b/dailybowlnpo/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.sybit</groupId>-->
+<!--			<artifactId>airtable.java</artifactId>-->
+<!--			<version>0.2.0</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
