--- a/dailybowlnpo/pom.xml
+++ b/dailybowlnpo/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>4.0</version>
+		</dependency>
 
 	</dependencies>
 
